# hespas

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
_autosummary/: hespas.chakra_gen.chakra_config.html  hespas.chakra_gen.chakra_trace_generator.html  hespas.chakra_gen.html  hespas.estimator.cache.html  hespas.estimator.check_available.html  hespas.estimator.choice.html  hespas.estimator.cocossim_estimator.html  hespas.estimator.compute_estimator.html  hespas.estimator.config_option.html  hespas.estimator.estimator.html  hespas.estimator.estimator_meta.html  hespas.estimator.html  hespas.estimator.result.html  hespas.estimator.roofline_estimator.html  hespas.estimator.run_config.html  hespas.estimator.xla_estimator.html  hespas.event_counters.event.html  hespas.event_counters.html  hespas.event_counters.stream.html  hespas.hespas_chakra_gen.html  hespas.html  hespas.mlir_parser.html  hespas.mlir_parser.mlir_analyzer.html  hespas.mlir_parser.mlir_common.html  hespas.mlir_parser.mlir_module.html  hespas.mlir_parser.mlir_parser.html  hespas.mlir_parser.mlir_splitter.html  hespas.statistics.html  hespas.statistics.statistics.html  hespas.utils.dict_tools.html  hespas.utils.dt_sizes.html  hespas.utils.html  hespas.utils.iree.html  hespas.utils.logging.html  hespas.utils.num_tools.html  hespas.utils.op_info.html  hespas.utils.serialisable.html  hespas.utils.tensor_size.html
_sources/: index.rst.txt
overview/: architecture.html  why_hespas.html
scripts/: utils.sh  xla_optimiser.sh
tests/: conftest.py  (+1 more)
(+101 files in other folders)
